# XLaunch

./: .gitignore  CMakeLists.txt  README.md
app/: MainRenderer.cpp  MainRenderer.h  WordCompleter.cpp  WordCompleter.h  main.cpp
tk/impl/: EmptyRenderer.cpp  Grapher.cpp  InvertedPixelSetter.cpp  Matrix.cpp  PixelSetter.cpp  PixelSetterWrapper.cpp  PixelWindow.cpp  TextDrawer.cpp  TextEditor.cpp  TransformedPixelSetter.cpp  X11PixelSetter.cpp
tk/pub/: BaseRenderer.h  Color.h  EmptyRenderer.h  Grapher.h  InvertedPixelSetter.h  KeyCodes.h  Matrix.h  PixelSetter.h  PixelSetterWrapper.h  PixelWindow.h  TextDrawer.h  TextEditor.h  TransformedPixelSetter.h  X11PixelSetter.h
